test cases for program paser completed

--- a/BLParser/bin/.gitignore
+++ b/BLParser/bin/.gitignore
@@ -8,3 +8,18 @@
 /program2.bl
 /statement1.bl
 /statement2.bl
+/program3.bl
+/program4.bl
+/program5.bl
+/program6.bl
+/program7.bl
+/program8.bl
+/program9.bl
+/program10.bl
+/program11.bl
+/program12.bl
+/program13.bl
+/program14.bl
+/program15.bl
+/program16.bl
+/program17.bl
