test cases for statement completed.

--- a/BLParser/bin/.gitignore
+++ b/BLParser/bin/.gitignore
@@ -23,3 +23,22 @@
 /program15.bl
 /program16.bl
 /program17.bl
+/statement3.bl
+/statement4.bl
+/statement5.bl
+/statement6.bl
+/statement7.bl
+/statement8.bl
+/statement9.bl
+/statement10.bl
+/statement11.bl
+/statement12.bl
+/statement13.bl
+/statement14.bl
+/statement15.bl
+/statement16.bl
+/statement17.bl
+/statement18.bl
+/statement19.bl
+/statement20.bl
+/statement21.bl
